# computer-vision

./: .gitignore  README.md  descriptors.ipynb  edge-detection.ipynb  gui.py  numpy.ipynb  opencv.ipynb  pyproject.toml  requirements.txt  tf.ipynb  vision.ipynb
vision/descriptor/: avg_RGB.py  spatial.py
vision/io/: __init__.py
vision/maths/: precision_recall.py
vision/model/: __init__.py
vision/util/: __init__.py  edge.py
vision/visualsearch/: __init__.py
